# alice-yamaha-skill

./: .travis.yml  README.md  auth.py  capabilities.py  config.py  exceptions.py  main.py  pyproject.toml  tox.ini
routers/: v1_0.py
tests/: conftest.py  test_capabilities.py
